# AegisDrive

./: .gitignore  README.md  carla_calib.py  carla_drive.py  carla_eval.py  carla_reset.py  hello_carla.py  pyproject.toml  requirements.txt
src/aegisdrive/: __init__.py  interfaces.py  main.py  schemas.py
src/aegisdrive/analytics/: report.py
src/aegisdrive/control/: controller.py
src/aegisdrive/ego/: ego_motion.py
src/aegisdrive/estimation/: kinematics.py
src/aegisdrive/io/: carla_source.py  video_sink.py  video_source.py
src/aegisdrive/learning/: profile.py
src/aegisdrive/perception/: fake_detector.py  yolo_detector.py
src/aegisdrive/pipeline/: runner.py
src/aegisdrive/preprocess/: conditions.py
src/aegisdrive/risk/: rule_engine.py
src/aegisdrive/scene/: carla_lanes.py  lane_tracker.py  lanes.py  road_segmenter.py  ufld_lanes.py
src/aegisdrive/tracking/: kalman_tracker.py  simple_tracker.py
src/aegisdrive/understanding/: behavior.py  object_state.py
src/aegisdrive/viz/: annotator.py  dashboard.py
tests/: test_pipeline.py
